--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<description>API for generate QRCode</description>
 	<properties>
 		<java.version>17</java.version>
+		<zxing.version>3.3.0</zxing.version>
+		<springfox.version>2.9.2</springfox.version>
+		<gson.version>2.8.5</gson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,13 +38,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
-			<artifactId>core</artifactId>
-			<version>3.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
-			<version>3.3.0</version>
+			<version>${zxing.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -51,12 +49,12 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
+			<version>${springfox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.5</version>
+			<version>${gson.version}</version>
 		</dependency>
 	</dependencies>
 
